# src/controllers/categoryController.js
@@ -1,7 +1,6 @@
 import { findAllCategories, findCategoryById, insertCategory, updateCategory, deleteCategory } from '../models/categoryModel.js';
 import AppError from '../utils/AppError.js';
 
-// GET all categories
 export const getAllCategories = async (req, res, next) => {
   // #swagger.tags = ['Categories']
   // #swagger.summary = 'Get all available categories'
@@ -17,11 +16,9 @@ export const getAllCategories = async (req, res, next) => {
   }
 };
 
-// GET single category
 export const getCategory = async (req, res, next) => {
   // #swagger.tags = ['Categories']
   // #swagger.summary = 'Get a category by ID'
-  /* #swagger.parameters['id'] = { description: 'Category ID' } */
   try {
     const category = await findCategoryById(req.params.id);
     if (!category) {
@@ -33,19 +30,9 @@ export const getCategory = async (req, res, next) => {
   }
 };
 
-// POST create category
 export const createCategory = async (req, res, next) => {
   // #swagger.tags = ['Categories']
   // #swagger.summary = 'Create a new category'
-  /* #swagger.parameters['category'] = {
-    in: 'body',
-    description: 'Category data',
-    required: true,
-    schema: {
-      name: 'string',
-      description: 'string'
-    }
-  } */
   try {
     const category = await insertCategory(req.body);
     res.status(201).json({ status: 'success', data: category });
@@ -54,20 +41,9 @@ export const createCategory = async (req, res, next) => {
   }
 };
 
-// PUT update category
 export const updateCategoryById = async (req, res, next) => {
   // #swagger.tags = ['Categories']
   // #swagger.summary = 'Update a category by ID'
-  /* #swagger.parameters['id'] = { description: 'Category ID' } */
-  /* #swagger.parameters['category'] = {
-    in: 'body',
-    description: 'Category data',
-    required: true,
-    schema: {
-      name: 'string',
-      description: 'string'
-    }
-  } */
   try {
     const category = await updateCategory(req.params.id, req.body);
     if (!category) {
@@ -79,11 +55,9 @@ export const updateCategoryById = async (req, res, next) => {
   }
 };
 
-// DELETE category
 export const deleteCategoryById = async (req, res, next) => {
   // #swagger.tags = ['Categories']
   // #swagger.summary = 'Delete a category by ID'
-  /* #swagger.parameters['id'] = { description: 'Category ID' } */
   try {
     const category = await deleteCategory(req.params.id);
     if (!category) {
