# swagger-output.json
@@ -40,27 +40,6 @@
         ],
         "summary": "Create a new category",
         "description": "",
-        "parameters": [
-          {
-            "name": "category",
-            "in": "body",
-            "description": "Category data",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "description": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -80,8 +59,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Category ID"
+            "type": "string"
           }
         ],
         "responses": {
@@ -101,27 +79,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Category ID"
-          },
-          {
-            "name": "category",
-            "in": "body",
-            "description": "Category data",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "description": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -141,8 +99,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Category ID"
+            "type": "string"
           }
         ],
         "responses": {
@@ -158,7 +115,7 @@
           "Tracks"
         ],
         "summary": "Get all audio tracks",
-        "description": "Retrieves a list of all audio tracks in the database.",
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
@@ -171,16 +128,6 @@
         ],
         "summary": "Create a new track",
         "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "Track data",
-            "schema": {
-              "$ref": "#/definitions/Track"
-            }
-          }
-        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -200,8 +147,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Track ID"
+            "type": "string"
           }
         ],
         "responses": {
@@ -221,16 +167,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Track ID"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "Updated track data",
-            "schema": {
-              "$ref": "#/definitions/Track"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -250,8 +187,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Track ID"
+            "type": "string"
           }
         ],
         "responses": {
